Adding an EventListner
I have added an Event Listener on 'input' field in order for mobile users to start the game just by clicking the 'Enter' Key.

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <div class="signX"></div>
                 <form>
                     <label for="Username">Player 1</label>
-                    <input type="text" id="Username1" placeholder="Enter Your Name">
+                    <input type="text" id="Username1" placeholder="Enter Your Name" class="inputs">
                 </form>
             </div>
             <div class="player2">
                 <div class="signY"></div>
                 <form>
                     <label for="Username">Player 2</label>
-                    <input type="text" id="Username2" placeholder="Enter Your Name">
+                    <input type="text" id="Username2" placeholder="Enter Your Name"  class="inputs">
                 </form>
             </div>   
         </div>
